# lab

./: .gitignore  CMakeLists.txt  Makefile
src/: a.cpp  a.h  main.cpp  vector.cpp  vector.h
